--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mongoose": "^5.4.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "twig": "^1.12.0"
   }
 }
